@@ -2,14 +2,14 @@ package com.faforever.api.user;
 
 
 import com.faforever.api.AbstractIntegrationTest;
+import com.faforever.api.data.domain.GroupPermission;
 import com.faforever.api.data.domain.User;
 import com.faforever.api.email.EmailSender;
 import com.faforever.api.error.ErrorCode;
 import com.faforever.api.security.FafTokenService;
 import com.faforever.api.security.FafTokenType;
 import com.faforever.api.security.OAuthScope;
-import com.google.common.collect.ImmutableMap;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.HttpHeaders;
@@ -19,6 +19,7 @@ import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.util.MultiValueMap;
 
 import java.time.Duration;
+import java.util.Map;
 
 import static junitx.framework.Assert.assertEquals;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -66,7 +67,7 @@ public class UsersControllerTest extends AbstractIntegrationTest {
     params.add("password", NEW_PASSWORD);
 
     mockMvc.perform(post("/users/register")
-      .with(getOAuthToken(OAuthScope._CREATE_USER))
+      .with(getOAuthTokenWithoutUser(OAuthScope._CREATE_USER))
       .params(params)
     ).andExpect(status().isOk());
 
@@ -95,7 +96,7 @@ public class UsersControllerTest extends AbstractIntegrationTest {
     params.add("password", NEW_PASSWORD);
 
     MvcResult result = mockMvc.perform(post("/users/register")
-      .with(getOAuthToken(OAuthScope._CREATE_USER))
+      .with(getOAuthTokenWithoutUser(OAuthScope._CREATE_USER))
       .params(params)
     ).andExpect(status().is4xxClientError())
       .andReturn();
@@ -108,15 +109,16 @@ public class UsersControllerTest extends AbstractIntegrationTest {
   public void activateWithSuccess() throws Exception {
     String token = fafTokenService.createToken(FafTokenType.REGISTRATION,
       Duration.ofSeconds(100),
-      ImmutableMap.of(
+      Map.of(
         UserService.KEY_USERNAME, NEW_USER,
-        UserService.KEY_EMAIL, NEW_EMAIL,
-        UserService.KEY_PASSWORD, NEW_PASSWORD
+        UserService.KEY_EMAIL, NEW_EMAIL
       ));
 
-    mockMvc.perform(get("/users/activate?token=" + token))
-      .andExpect(status().isFound())
-      .andExpect(redirectedUrl("http://localhost/account_activated"));
+    mockMvc.perform(
+      post("/users/activate")
+        .param("token", token)
+        .param("password", NEW_PASSWORD))
+      .andExpect(status().isOk());
   }
 
   @Test
@@ -128,24 +130,25 @@ public class UsersControllerTest extends AbstractIntegrationTest {
 
     mockMvc.perform(
       post("/users/changePassword")
-        .with(getOAuthToken(OAuthScope._WRITE_ACCOUNT_DATA))
+        .with(getOAuthTokenWithoutUser(OAuthScope._WRITE_ACCOUNT_DATA))
         .params(params))
       .andExpect(status().isOk());
 
-    User user = userRepository.findOneByLoginIgnoreCase(AUTH_USER).get();
+    User user = userRepository.findOneByLogin(AUTH_USER).get();
     assertEquals(user.getPassword(), "5c29a959abce4eda5f0e7a4e7ea53dce4fa0f0abbe8eaa63717e2fed5f193d31");
     verify(anopeUserRepository, times(1)).updatePassword(eq(AUTH_USER), anyString());
   }
 
   @Test
   @WithUserDetails(AUTH_USER)
-  public void changePasswordWithWrongScope() throws Exception {
+  public void changePasswordWithoutScope() throws Exception {
     MultiValueMap<String, String> params = new HttpHeaders();
     params.add("currentPassword", AUTH_USER);
     params.add("newPassword", NEW_PASSWORD);
 
     mockMvc.perform(
       post("/users/changePassword")
+        .with(getOAuthTokenWithoutUser(NO_SCOPE))
         .params(params))
       .andExpect(status().isForbidden());
   }
@@ -159,7 +162,7 @@ public class UsersControllerTest extends AbstractIntegrationTest {
 
     MvcResult mvcResult = mockMvc.perform(
       post("/users/changePassword")
-        .with(getOAuthToken(OAuthScope._WRITE_ACCOUNT_DATA))
+        .with(getOAuthTokenWithoutUser(OAuthScope._WRITE_ACCOUNT_DATA))
         .params(params))
       .andExpect(status().is4xxClientError())
       .andReturn();
@@ -176,23 +179,24 @@ public class UsersControllerTest extends AbstractIntegrationTest {
 
     mockMvc.perform(
       post("/users/changeEmail")
-        .with(getOAuthToken(OAuthScope._WRITE_ACCOUNT_DATA))
+        .with(getOAuthTokenWithoutUser(OAuthScope._WRITE_ACCOUNT_DATA))
         .params(params))
       .andExpect(status().isOk());
 
-    User user = userRepository.findOneByLoginIgnoreCase(AUTH_USER).get();
+    User user = userRepository.findOneByLogin(AUTH_USER).get();
     assertEquals(user.getEmail(), NEW_EMAIL);
   }
 
   @Test
   @WithUserDetails(AUTH_USER)
-  public void changeEmailWithWrongScope() throws Exception {
+  public void changeEmailWithoutScope() throws Exception {
     MultiValueMap<String, String> params = new HttpHeaders();
     params.add("currentPassword", AUTH_USER);
     params.add("newEmail", NEW_EMAIL);
 
     mockMvc.perform(
       post("/users/changeEmail")
+        .with(getOAuthTokenWithoutUser(NO_SCOPE))
         .params(params))
       .andExpect(status().isForbidden());
   }
@@ -206,7 +210,7 @@ public class UsersControllerTest extends AbstractIntegrationTest {
 
     MvcResult mvcResult = mockMvc.perform(
       post("/users/changeEmail")
-        .with(getOAuthToken(OAuthScope._WRITE_ACCOUNT_DATA))
+        .with(getOAuthTokenWithoutUser(OAuthScope._WRITE_ACCOUNT_DATA))
         .params(params))
       .andExpect(status().is4xxClientError())
       .andReturn();
@@ -223,7 +227,7 @@ public class UsersControllerTest extends AbstractIntegrationTest {
 
     MvcResult mvcResult = mockMvc.perform(
       post("/users/changeEmail")
-        .with(getOAuthToken(OAuthScope._WRITE_ACCOUNT_DATA))
+        .with(getOAuthTokenWithoutUser(OAuthScope._WRITE_ACCOUNT_DATA))
         .params(params))
       .andExpect(status().is4xxClientError())
       .andReturn();
@@ -236,10 +240,9 @@ public class UsersControllerTest extends AbstractIntegrationTest {
   public void resetPasswordWithUsername() throws Exception {
     MultiValueMap<String, String> params = new HttpHeaders();
     params.add("identifier", AUTH_USER);
-    params.add("newPassword", NEW_PASSWORD);
 
     mockMvc.perform(
-      post("/users/resetPassword")
+      post("/users/requestPasswordReset")
         .params(params))
       .andExpect(status().isOk());
 
@@ -251,10 +254,9 @@ public class UsersControllerTest extends AbstractIntegrationTest {
   public void resetPasswordWithEmail() throws Exception {
     MultiValueMap<String, String> params = new HttpHeaders();
     params.add("identifier", "user@faforever.com");
-    params.add("newPassword", NEW_PASSWORD);
 
     mockMvc.perform(
-      post("/users/resetPassword")
+      post("/users/requestPasswordReset")
         .params(params))
       .andExpect(status().isOk());
 
@@ -263,16 +265,16 @@ public class UsersControllerTest extends AbstractIntegrationTest {
 
   @Test
   @WithAnonymousUser
-  public void confirmPasswordReset() throws Exception {
+  public void performPasswordReset() throws Exception {
     String token = fafTokenService.createToken(FafTokenType.PASSWORD_RESET,
       Duration.ofSeconds(100),
-      ImmutableMap.of(UserService.KEY_USER_ID, String.valueOf(1),
-        UserService.KEY_PASSWORD, NEW_PASSWORD));
+      Map.of(UserService.KEY_USER_ID, String.valueOf(1)));
 
     mockMvc.perform(
-      get("/users/confirmPasswordReset?token={token}", token))
-      .andExpect(status().isFound())
-      .andExpect(redirectedUrl("http://localhost/password_resetted"));
+      post("/users/performPasswordReset")
+        .param("token", token)
+        .param("newPassword", NEW_PASSWORD))
+      .andExpect(status().isOk());
   }
 
   @Test
@@ -296,7 +298,7 @@ public class UsersControllerTest extends AbstractIntegrationTest {
   public void buildSteamLinkUrlAlreadyLinked() throws Exception {
     MvcResult result = mockMvc.perform(
       post("/users/buildSteamLinkUrl?callbackUrl=foo")
-        .with(getOAuthToken(OAuthScope._WRITE_ACCOUNT_DATA)))
+        .with(getOAuthTokenWithoutUser(OAuthScope._WRITE_ACCOUNT_DATA)))
       .andExpect(status().is4xxClientError())
       .andReturn();
 
@@ -310,7 +312,7 @@ public class UsersControllerTest extends AbstractIntegrationTest {
 
     mockMvc.perform(
       post("/users/buildSteamLinkUrl?callbackUrl=foo")
-        .with(getOAuthToken(OAuthScope._WRITE_ACCOUNT_DATA)))
+        .with(getOAuthTokenWithoutUser(OAuthScope._WRITE_ACCOUNT_DATA)))
       .andExpect(status().isOk());
 
     verify(steamService, times(1)).buildLoginUrl(anyString());
@@ -326,9 +328,9 @@ public class UsersControllerTest extends AbstractIntegrationTest {
     String token = fafTokenService.createToken(
       FafTokenType.LINK_TO_STEAM,
       Duration.ofSeconds(100),
-      ImmutableMap.of(
+      Map.of(
         UserService.KEY_USER_ID, "1",
-        UserService.KEY_STEAM_LINK_CALLBACK_URL, callbackUrl
+        UserService.KEY_STEAM_CALLBACK_URL, callbackUrl
       ));
 
     when(steamService.parseSteamIdFromLoginRedirect(any())).thenReturn(steamId);
@@ -354,9 +356,9 @@ public class UsersControllerTest extends AbstractIntegrationTest {
     String token = fafTokenService.createToken(
       FafTokenType.LINK_TO_STEAM,
       Duration.ofSeconds(100),
-      ImmutableMap.of(
+      Map.of(
         UserService.KEY_USER_ID, "1",
-        UserService.KEY_STEAM_LINK_CALLBACK_URL, callbackUrl
+        UserService.KEY_STEAM_CALLBACK_URL, callbackUrl
       ));
 
     when(steamService.parseSteamIdFromLoginRedirect(any())).thenReturn(steamId);
@@ -365,7 +367,7 @@ public class UsersControllerTest extends AbstractIntegrationTest {
     mockMvc.perform(
       get(String.format("/users/linkToSteam?callbackUrl=%s&token=%s&openid.identity=http://steamcommunity.com/openid/id/%s", callbackUrl, token, steamId)))
       .andExpect(status().isFound())
-      .andExpect(redirectedUrlPattern(callbackUrl+"?errors=*"+ErrorCode.STEAM_ID_ALREADY_LINKED.getCode()+"*"+userThatOwnsSteamId.getLogin()+"*"));
+      .andExpect(redirectedUrlPattern(callbackUrl + "?errors=*" + ErrorCode.STEAM_ID_ALREADY_LINKED.getCode() + "*" + userThatOwnsSteamId.getLogin() + "*"));
     //We expect and error with code STEAM_ID_ALREADY_LINKED and that the error message contains the user that this steam account was linked to already which is MODERATOR with id 2
 
     assertThat(userRepository.getOne(1).getSteamId(), nullValue());
@@ -405,7 +407,7 @@ public class UsersControllerTest extends AbstractIntegrationTest {
 
     mockMvc.perform(
       post("/users/changeUsername")
-        .with(getOAuthToken(OAuthScope._WRITE_ACCOUNT_DATA))
+        .with(getOAuthTokenWithoutUser(OAuthScope._WRITE_ACCOUNT_DATA))
         .params(params))
       .andExpect(status().isOk());
 
@@ -422,7 +424,7 @@ public class UsersControllerTest extends AbstractIntegrationTest {
 
     mockMvc.perform(
       post("/users/1/forceChangeUsername")
-        .with(getOAuthToken(OAuthScope._WRITE_ACCOUNT_DATA))
+        .with(getOAuthTokenWithoutUser(OAuthScope._WRITE_ACCOUNT_DATA))
         .params(params))
       .andExpect(status().is4xxClientError())
       .andReturn();
@@ -431,20 +433,41 @@ public class UsersControllerTest extends AbstractIntegrationTest {
   }
 
   @Test
-  @WithUserDetails(AUTH_MODERATOR)
   public void changeUsernameForcedByModerator() throws Exception {
-    assertThat(userRepository.getOne(2).getLogin(), is(AUTH_MODERATOR));
-
     MultiValueMap<String, String> params = new HttpHeaders();
     params.add("newUsername", NEW_USER);
 
     mockMvc.perform(
       post("/users/2/forceChangeUsername")
-        .with(getOAuthToken(OAuthScope._WRITE_ACCOUNT_DATA))
+        .with(getOAuthTokenWithTestUser(OAuthScope._ADMINISTRATIVE_ACTION, GroupPermission.ROLE_ADMIN_ACCOUNT_NAME_CHANGE))
         .params(params))
       .andExpect(status().isOk());
 
     assertThat(userRepository.getOne(2).getLogin(), is(NEW_USER));
+  }
+
+  @Test
+  public void changeUsernameForcedByModeratorWithoutScope() throws Exception {
+    MultiValueMap<String, String> params = new HttpHeaders();
+    params.add("newUsername", NEW_USER);
+
+    mockMvc.perform(
+      post("/users/2/forceChangeUsername")
+        .with(getOAuthTokenWithTestUser(NO_SCOPE, GroupPermission.ROLE_ADMIN_ACCOUNT_NAME_CHANGE))
+        .params(params))
+      .andExpect(status().is4xxClientError());
+  }
+
+  @Test
+  public void changeUsernameForcedByModeratorWithoutRole() throws Exception {
+    MultiValueMap<String, String> params = new HttpHeaders();
+    params.add("newUsername", NEW_USER);
+
+    mockMvc.perform(
+      post("/users/2/forceChangeUsername")
+        .with(getOAuthTokenWithTestUser(OAuthScope._ADMINISTRATIVE_ACTION, NO_AUTHORITIES))
+        .params(params))
+      .andExpect(status().is4xxClientError());
   }
 
   @Test
@@ -457,7 +480,7 @@ public class UsersControllerTest extends AbstractIntegrationTest {
 
     MvcResult result = mockMvc.perform(
       post("/users/changeUsername")
-        .with(getOAuthToken(OAuthScope._WRITE_ACCOUNT_DATA))
+        .with(getOAuthTokenWithoutUser(OAuthScope._WRITE_ACCOUNT_DATA))
         .params(params))
       .andExpect(status().is4xxClientError())
       .andReturn();
@@ -468,20 +491,26 @@ public class UsersControllerTest extends AbstractIntegrationTest {
   }
 
   @Test
-  @WithUserDetails(AUTH_MODERATOR)
   public void changeUsernameTooEarlyButForced() throws Exception {
-    assertThat(userRepository.getOne(2).getLogin(), is(AUTH_MODERATOR));
-
     MultiValueMap<String, String> params = new HttpHeaders();
     params.add("newUsername", NEW_USER);
 
     mockMvc.perform(
       post("/users/2/forceChangeUsername")
-        .with(getOAuthToken(OAuthScope._WRITE_ACCOUNT_DATA))
+        .with(getOAuthTokenWithTestUser(OAuthScope._ADMINISTRATIVE_ACTION, GroupPermission.ROLE_ADMIN_ACCOUNT_NAME_CHANGE))
         .params(params))
       .andExpect(status().isOk())
       .andReturn();
 
     assertThat(userRepository.getOne(2).getLogin(), is(NEW_USER));
+  }
+
+  @Test
+  @WithUserDetails(AUTH_USER)
+  public void resyncAccountSuccess() throws Exception {
+    mockMvc.perform(
+      post("/users/resyncAccount")
+        .with(getOAuthTokenWithoutUser(OAuthScope._WRITE_ACCOUNT_DATA)))
+      .andExpect(status().isOk());
   }
 }
