@@ -1,10 +1,11 @@
 package com.faforever.api.user;
 
 import com.faforever.api.config.FafApiProperties;
-import com.google.common.collect.ImmutableMap;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.stereotype.Repository;
+
+import java.util.Map;
 
 /**
  * Repository to access Anope's @{NickCore} table (the one that contains usernames and passwords).
@@ -24,7 +25,7 @@ public class AnopeUserRepository {
   // Don't make this package private, see https://jira.spring.io/browse/SPR-15911
   public void updatePassword(String username, String password) {
     jdbcTemplate.update("UPDATE `" + anopeDatabaseName + "`.anope_db_NickCore SET pass = :password WHERE display = :username",
-      ImmutableMap.of(
+      Map.of(
         "password", password,
         "username", username
       ));
