@@ -2,51 +2,45 @@ package com.faforever.api.user;
 
 import com.faforever.api.config.FafApiProperties;
 import com.faforever.api.config.FafApiProperties.Steam;
-import com.google.common.collect.ImmutableMap;
+import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.http.NameValuePair;
-import org.apache.http.client.utils.URLEncodedUtils;
-import org.apache.http.message.BasicNameValuePair;
 import org.json.JSONObject;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
+import org.springframework.web.util.UriComponentsBuilder;
 
 import javax.servlet.http.HttpServletRequest;
-import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
-import java.util.List;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse.BodyHandlers;
+import java.util.Map;
 
 @Service
 @Slf4j
+@RequiredArgsConstructor
 public class SteamService {
   private final FafApiProperties properties;
 
-  public SteamService(FafApiProperties properties) {
-    this.properties = properties;
-  }
-
   String buildLoginUrl(String redirectUrl) {
-    log.trace("Building steam login url for redirect url: {}", redirectUrl);
+    log.debug("Building steam login url for redirect url: {}", redirectUrl);
 
-    List<NameValuePair> steamArgs = Arrays.asList(
-      new BasicNameValuePair("openid.ns", "http://specs.openid.net/auth/2.0"),
-      new BasicNameValuePair("openid.mode", "checkid_setup"),
-      new BasicNameValuePair("openid.return_to", redirectUrl),
-      new BasicNameValuePair("openid.realm", properties.getSteam().getRealm()),
-      new BasicNameValuePair("openid.identity", "http://specs.openid.net/auth/2.0/identifier_select"),
-      new BasicNameValuePair("openid.claimed_id", "http://specs.openid.net/auth/2.0/identifier_select")
-    );
-    String queryArgs = URLEncodedUtils.format(steamArgs, StandardCharsets.UTF_8);
-
-    return String.format(properties.getSteam().getLoginUrlFormat(), queryArgs);
+    return UriComponentsBuilder.fromHttpUrl(properties.getSteam().getLoginUrlFormat())
+      .queryParam("openid.ns", "http://specs.openid.net/auth/2.0")
+      .queryParam("openid.mode", "checkid_setup")
+      .queryParam("openid.return_to", redirectUrl)
+      .queryParam("openid.realm", properties.getSteam().getRealm())
+      .queryParam("openid.identity", "http://specs.openid.net/auth/2.0/identifier_select")
+      .queryParam("openid.claimed_id", "http://specs.openid.net/auth/2.0/identifier_select")
+      .toUriString();
   }
 
   String parseSteamIdFromLoginRedirect(HttpServletRequest request) {
     log.trace("Parsing steam id from request: {}", request);
 
     String identityUrl = request.getParameter("openid.identity");
-    return identityUrl.substring(identityUrl.lastIndexOf("/") + 1, identityUrl.length());
+    return identityUrl.substring(identityUrl.lastIndexOf("/") + 1);
   }
 
   @SneakyThrows
@@ -55,7 +49,7 @@ public class SteamService {
 
     Steam steam = properties.getSteam();
 
-    String answer = new RestTemplate().getForObject(steam.getGetOwnedGamesUrlFormat(), String.class, ImmutableMap.of(
+    String answer = new RestTemplate().getForObject(steam.getGetOwnedGamesUrlFormat(), String.class, Map.of(
       "key", steam.getApiKey(),
       "steamId", steamId,
       "format", "json",
@@ -65,5 +59,29 @@ public class SteamService {
 
     JSONObject response = result.getJSONObject("response");
     return response.has("game_count") && response.getInt("game_count") > 0;
+  }
+
+  @SneakyThrows
+  void validateSteamRedirect(HttpServletRequest request) {
+    log.debug("Checking valid OpenID 2.0 redirect against Steam API, query string: {}", request.getQueryString());
+
+    UriComponentsBuilder builder = UriComponentsBuilder.fromHttpUrl(properties.getSteam().getLoginUrlFormat());
+    request.getParameterMap().forEach(builder::queryParam);
+    builder.replaceQueryParam("openid.mode", "check_authentication");
+
+    // for some reason the + character doesn't get encoded
+    String recodedUri = builder.toUriString().replace("+", "%2B");
+    log.debug("Verification uri: {}", recodedUri);
+
+    // the Spring RestTemplate still struggles with the + character so we use the default Java http client
+    String result = HttpClient.newHttpClient()
+      .send(HttpRequest.newBuilder(new URI(recodedUri)).build(), BodyHandlers.ofString())
+      .body();
+
+    if (result == null || !result.contains("is_valid:true")) {
+      throw new IllegalArgumentException("Steam redirect could not be validated! Original response:\n" + result);
+    } else {
+      log.debug("Steam response successfully validated.");
+    }
   }
 }
