@@ -9,7 +9,6 @@ import com.faforever.api.email.EmailService;
 import com.faforever.api.error.ApiException;
 import com.faforever.api.error.Error;
 import com.faforever.api.error.ErrorCode;
-import com.faforever.api.mautic.MauticService;
 import com.faforever.api.player.PlayerRepository;
 import com.faforever.api.rating.GlobalRatingRepository;
 import com.faforever.api.rating.Ladder1v1RatingRepository;
@@ -17,36 +16,43 @@ import com.faforever.api.security.FafPasswordEncoder;
 import com.faforever.api.security.FafTokenService;
 import com.faforever.api.security.FafTokenType;
 import com.faforever.api.security.FafUserDetails;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.hash.Hashing;
-import lombok.SneakyThrows;
+import io.micrometer.core.instrument.Counter;
+import io.micrometer.core.instrument.MeterRegistry;
 import lombok.Value;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.nio.charset.StandardCharsets;
 import java.time.Duration;
-import java.time.OffsetDateTime;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.regex.Pattern;
 
 import static com.faforever.api.error.ErrorCode.TOKEN_INVALID;
+import static com.faforever.api.error.ErrorCode.UNKNOWN_STEAM_ID;
 
 @Service
 @Slf4j
 public class UserService {
   static final String KEY_USERNAME = "username";
   static final String KEY_EMAIL = "email";
-  static final String KEY_PASSWORD = "password";
   static final String KEY_USER_ID = "id";
-  static final String KEY_STEAM_LINK_CALLBACK_URL = "callbackUrl";
+  static final String KEY_STEAM_CALLBACK_URL = "callbackUrl";
+  static final String KEY_PASSWORD = "password";
+
   private static final Pattern USERNAME_PATTERN = Pattern.compile("[A-Za-z][A-Za-z0-9_-]{2,15}$");
+  private static final String USER_REGISTRATIONS_COUNT = "user.registrations.count";
+  private static final String USER_PASSWORD_RESET_COUNT = "user.password.reset.count";
+  private static final String STEP_TAG = "step";
+  private static final String MODE_TAG = "step";
+
   private final EmailService emailService;
   private final PlayerRepository playerRepository;
   private final UserRepository userRepository;
@@ -56,14 +62,35 @@ public class UserService {
   private final AnopeUserRepository anopeUserRepository;
   private final FafTokenService fafTokenService;
   private final SteamService steamService;
-  private final Optional<MauticService> mauticService;
   private final GlobalRatingRepository globalRatingRepository;
   private final Ladder1v1RatingRepository ladder1v1RatingRepository;
+  private final MeterRegistry meterRegistry;
+  private final Counter userRegistrationCounter;
+  private final Counter userActivationCounter;
+  private final Counter userSteamLinkRequestedCounter;
+  private final Counter userSteamLinkDoneCounter;
+  private final Counter userSteamLinkFailedCounter;
+  private final Counter userNameChangeCounter;
+  private final Counter userPasswordResetRequestCounter;
+  private final Counter userPasswordResetViaSteamRequestCounter;
+  private final Counter userPasswordResetDoneCounter;
+  private final Counter userPasswordResetFailedCounter;
+  private final Counter userPasswordResetDoneViaSteamCounter;
+  private final Counter userPasswordResetFailedViaSteamCounter;
+  private final ApplicationEventPublisher eventPublisher;
 
-  public UserService(EmailService emailService, PlayerRepository playerRepository, UserRepository userRepository,
-                     NameRecordRepository nameRecordRepository, FafApiProperties properties,
-                     AnopeUserRepository anopeUserRepository, FafTokenService fafTokenService,
-                     SteamService steamService, Optional<MauticService> mauticService, GlobalRatingRepository globalRatingRepository, Ladder1v1RatingRepository ladder1v1RatingRepository) {
+  public UserService(EmailService emailService,
+                     PlayerRepository playerRepository,
+                     UserRepository userRepository,
+                     NameRecordRepository nameRecordRepository,
+                     FafApiProperties properties,
+                     AnopeUserRepository anopeUserRepository,
+                     FafTokenService fafTokenService,
+                     SteamService steamService,
+                     GlobalRatingRepository globalRatingRepository,
+                     Ladder1v1RatingRepository ladder1v1RatingRepository,
+                     MeterRegistry meterRegistry,
+                     ApplicationEventPublisher eventPublisher) {
     this.emailService = emailService;
     this.playerRepository = playerRepository;
     this.userRepository = userRepository;
@@ -72,53 +99,70 @@ public class UserService {
     this.anopeUserRepository = anopeUserRepository;
     this.fafTokenService = fafTokenService;
     this.steamService = steamService;
-    this.mauticService = mauticService;
     this.globalRatingRepository = globalRatingRepository;
     this.ladder1v1RatingRepository = ladder1v1RatingRepository;
+    this.eventPublisher = eventPublisher;
+    this.meterRegistry = meterRegistry;
+
     this.passwordEncoder = new FafPasswordEncoder();
+
+    userRegistrationCounter = meterRegistry.counter(USER_REGISTRATIONS_COUNT, STEP_TAG, "registration");
+    userActivationCounter = meterRegistry.counter(USER_REGISTRATIONS_COUNT, STEP_TAG, "activation");
+    userSteamLinkRequestedCounter = meterRegistry.counter(USER_REGISTRATIONS_COUNT, STEP_TAG, "steamLinkRequested");
+    userSteamLinkDoneCounter = meterRegistry.counter(USER_REGISTRATIONS_COUNT, STEP_TAG, "steamLinkDone");
+    userSteamLinkFailedCounter = meterRegistry.counter(USER_REGISTRATIONS_COUNT, STEP_TAG, "steamLinkFailed");
+    userNameChangeCounter = meterRegistry.counter("user.name.change.count");
+    userPasswordResetRequestCounter = meterRegistry.counter(USER_PASSWORD_RESET_COUNT, STEP_TAG, "request", MODE_TAG, "email");
+    userPasswordResetViaSteamRequestCounter = meterRegistry.counter(USER_PASSWORD_RESET_COUNT, STEP_TAG, "request", MODE_TAG, "steam");
+    userPasswordResetDoneCounter = meterRegistry.counter(USER_PASSWORD_RESET_COUNT, STEP_TAG, "done", MODE_TAG, "email");
+    userPasswordResetFailedCounter = meterRegistry.counter(USER_PASSWORD_RESET_COUNT, STEP_TAG, "failed", MODE_TAG, "email");
+    userPasswordResetDoneViaSteamCounter = meterRegistry.counter(USER_PASSWORD_RESET_COUNT, STEP_TAG, "done", MODE_TAG, "steam");
+    userPasswordResetFailedViaSteamCounter = meterRegistry.counter(USER_PASSWORD_RESET_COUNT, STEP_TAG, "failed", MODE_TAG, "steam");
   }
 
-  void register(String username, String email, String password) {
+  void register(String username, String email) {
     log.debug("Registration requested for user: {}", username);
     validateUsername(username);
     emailService.validateEmailAddress(email);
 
-    if (userRepository.existsByEmailIgnoreCase(email)) {
-      throw new ApiException(new Error(ErrorCode.EMAIL_REGISTERED, email));
+    if (userRepository.existsByEmail(email)) {
+      throw ApiException.of(ErrorCode.EMAIL_REGISTERED, email);
     }
 
     int usernameReservationTimeInMonths = properties.getUser().getUsernameReservationTimeInMonths();
     nameRecordRepository.getLastUsernameOwnerWithinMonths(username, usernameReservationTimeInMonths)
       .ifPresent(reservedByUserId -> {
-        throw new ApiException(new Error(ErrorCode.USERNAME_RESERVED, username, usernameReservationTimeInMonths));
+        throw ApiException.of(ErrorCode.USERNAME_RESERVED, username, usernameReservationTimeInMonths);
       });
 
     String token = fafTokenService.createToken(FafTokenType.REGISTRATION,
       Duration.ofSeconds(properties.getRegistration().getLinkExpirationSeconds()),
-      ImmutableMap.of(
+      Map.of(
         KEY_USERNAME, username,
-        KEY_EMAIL, email,
-        KEY_PASSWORD, passwordEncoder.encode(password)
+        KEY_EMAIL, email
       ));
 
-    String activationUrl = String.format(properties.getRegistration().getActivationUrlFormat(), token);
+    String activationUrl = String.format(properties.getRegistration().getActivationUrlFormat(), username, token);
 
     emailService.sendActivationMail(username, email, activationUrl);
+
+
+    userRegistrationCounter.increment();
   }
 
   private void validateUsername(String username) {
     if (!USERNAME_PATTERN.matcher(username).matches()) {
-      throw new ApiException(new Error(ErrorCode.USERNAME_INVALID, username));
+      throw ApiException.of(ErrorCode.USERNAME_INVALID, username);
     }
-    if (userRepository.existsByLoginIgnoreCase(username)) {
-      throw new ApiException(new Error(ErrorCode.USERNAME_TAKEN, username));
+    if (userRepository.existsByLogin(username)) {
+      throw ApiException.of(ErrorCode.USERNAME_TAKEN, username);
     }
   }
 
   /**
    * Creates a new user based on the information in the activation token.
    *
-   * @param token the JWT in the format: <pre>
+   * @param registrationToken the JWT in the format: <pre>
    *   {
    *     "action": "activate",
    *     "expiry": "2011-12-03T10:15:30Z",
@@ -126,18 +170,18 @@ public class UserService {
    *   }
    * </pre>
    */
-  @SneakyThrows
-  @SuppressWarnings("unchecked")
   @Transactional
-  void activate(String token, String ipAddress) {
-    Map<String, String> claims = fafTokenService.resolveToken(FafTokenType.REGISTRATION, token);
+  void activate(String registrationToken, String password, String ipAddress) {
+    Map<String, String> claims = fafTokenService.resolveToken(FafTokenType.REGISTRATION, registrationToken);
 
     String username = claims.get(KEY_USERNAME);
     String email = claims.get(KEY_EMAIL);
-    String password = claims.get(KEY_PASSWORD);
+
+    // the username could have been taken in the meantime
+    validateUsername(username);
 
     User user = new User();
-    user.setPassword(password);
+    user.setPassword(passwordEncoder.encode(password));
     user.setEmail(email);
     user.setLogin(username);
     user.setRecentIpAddress(ipAddress);
@@ -163,12 +207,13 @@ public class UserService {
 
     log.debug("User has been activated: {}", user);
 
-    createOrUpdateMauticContact(user, ipAddress);
+    broadcastUserChange(user);
+    userActivationCounter.increment();
   }
 
   void changePassword(String currentPassword, String newPassword, User user) {
     if (!Objects.equals(user.getPassword(), passwordEncoder.encode(currentPassword))) {
-      throw new ApiException(new Error(ErrorCode.PASSWORD_CHANGE_FAILED_WRONG_PASSWORD));
+      throw ApiException.of(ErrorCode.PASSWORD_CHANGE_FAILED_WRONG_PASSWORD);
     }
 
     setPassword(user, newPassword);
@@ -191,95 +236,119 @@ public class UserService {
       int minDaysBetweenChange = properties.getUser().getMinimumDaysBetweenUsernameChange();
       nameRecordRepository.getDaysSinceLastNewRecord(user.getId(), minDaysBetweenChange)
         .ifPresent(daysSinceLastRecord -> {
-          throw new ApiException(new Error(ErrorCode.USERNAME_CHANGE_TOO_EARLY, minDaysBetweenChange - daysSinceLastRecord.intValue()));
+          throw ApiException.of(ErrorCode.USERNAME_CHANGE_TOO_EARLY, minDaysBetweenChange - daysSinceLastRecord.intValue() + 1);
         });
 
       int usernameReservationTimeInMonths = properties.getUser().getUsernameReservationTimeInMonths();
       nameRecordRepository.getLastUsernameOwnerWithinMonths(newLogin, usernameReservationTimeInMonths)
         .ifPresent(reservedByUserId -> {
-          if (reservedByUserId != user.getId()) {
-            throw new ApiException(new Error(ErrorCode.USERNAME_RESERVED, newLogin, usernameReservationTimeInMonths));
+          if (!reservedByUserId.equals(user.getId())) {
+            throw ApiException.of(ErrorCode.USERNAME_RESERVED, newLogin, usernameReservationTimeInMonths);
           }
         });
 
     }
-    log.debug("Changing username for user ''{}'' to ''{}'', forced:''{}''", user, newLogin, force);
+    log.debug("Changing username for user ''{}'' to ''{}'', forced:''{}''", user.getLogin(), newLogin, force);
     NameRecord nameRecord = new NameRecord()
       .setName(user.getLogin())
       .setPlayer(playerRepository.getOne(user.getId()));
     nameRecordRepository.save(nameRecord);
 
     user.setLogin(newLogin);
+    user.setRecentIpAddress(ipAddress);
 
-    createOrUpdateMauticContact(userRepository.save(user), ipAddress);
-  }
-
-  private void createOrUpdateMauticContact(User user, String ipAddress) {
-    mauticService.ifPresent(service -> service.createOrUpdateContact(
-      user.getEmail(),
-      String.valueOf(user.getId()),
-      user.getLogin(),
-      ipAddress,
-      OffsetDateTime.now()
-    )
-      .thenAccept(result -> log.debug("Updated contact in Mautic: {}", user.getEmail()))
-      .exceptionally(throwable -> {
-        log.warn("Could not update contact in Mautic: {}", user, throwable);
-        return null;
-      }));
+    userRepository.save(user);
+    broadcastUserChange(user);
+    userNameChangeCounter.increment();
   }
 
   public void changeEmail(String currentPassword, String newEmail, User user, String ipAddress) {
     if (!passwordEncoder.matches(currentPassword, user.getPassword())) {
-      throw new ApiException(new Error(ErrorCode.EMAIL_CHANGE_FAILED_WRONG_PASSWORD));
+      throw ApiException.of(ErrorCode.EMAIL_CHANGE_FAILED_WRONG_PASSWORD);
     }
 
     emailService.validateEmailAddress(newEmail);
 
-    log.debug("Changing email for user ''{}'' to ''{}''", user, newEmail);
+    log.debug("Changing email for user ''{}'' to ''{}''", user.getLogin(), newEmail);
     user.setEmail(newEmail);
-    createOrUpdateUser(user, ipAddress);
+    user.setRecentIpAddress(ipAddress);
+
+    userRepository.save(user);
+    broadcastUserChange(user);
   }
 
-  private void createOrUpdateUser(User user, String ipAddress) {
-    createOrUpdateMauticContact(userRepository.save(user), ipAddress);
+  public void resynchronizeAccount(User user) {
+    log.debug("Resynchronizing account data for user ''{}''", user.getLogin());
+    broadcastUserChange(user);
   }
 
-  void resetPassword(String identifier, String newPassword) {
+  private void broadcastUserChange(User user) {
+    UserUpdatedEvent userUpdatedEvent = new UserUpdatedEvent(
+      user,
+      user.getId(),
+      user.getLogin(),
+      user.getEmail(),
+      user.getRecentIpAddress()
+    );
+
+    eventPublisher.publishEvent(userUpdatedEvent);
+  }
+
+  void requestPasswordReset(String identifier) {
     log.debug("Password reset requested for user-identifier: {}", identifier);
 
-    User user = userRepository.findOneByLoginIgnoreCase(identifier)
-      .orElseGet(() -> userRepository.findOneByEmailIgnoreCase(identifier)
-        .orElseThrow(() -> new ApiException(new Error(ErrorCode.UNKNOWN_IDENTIFIER))));
+    User user = userRepository.findOneByLogin(identifier)
+      .orElseGet(() -> userRepository.findOneByEmail(identifier)
+        .orElseThrow(() -> ApiException.of(ErrorCode.UNKNOWN_IDENTIFIER, identifier)));
 
     String token = fafTokenService.createToken(FafTokenType.PASSWORD_RESET,
-      Duration.ofSeconds(properties.getRegistration().getLinkExpirationSeconds()),
-      ImmutableMap.of(KEY_USER_ID, String.valueOf(user.getId()),
-        KEY_PASSWORD, newPassword));
+      Duration.ofSeconds(properties.getPasswordReset().getLinkExpirationSeconds()),
+      Map.of(KEY_USER_ID, String.valueOf(user.getId())));
 
-    String passwordResetUrl = String.format(properties.getPasswordReset().getPasswordResetUrlFormat(), token);
+    String passwordResetUrl = String.format(properties.getPasswordReset().getPasswordResetUrlFormat(), user.getLogin(), token);
 
     emailService.sendPasswordResetMail(user.getLogin(), user.getEmail(), passwordResetUrl);
+    userPasswordResetRequestCounter.increment();
   }
 
-  @SneakyThrows
-  void claimPasswordResetToken(String token) {
+  void performPasswordReset(String token, String newPassword) {
     log.debug("Trying to reset password with token: {}", token);
     Map<String, String> claims = fafTokenService.resolveToken(FafTokenType.PASSWORD_RESET, token);
 
     int userId = Integer.parseInt(claims.get(KEY_USER_ID));
-    String newPassword = claims.get(KEY_PASSWORD);
     User user = userRepository.findById(userId)
-      .orElseThrow(() -> new ApiException(new Error(TOKEN_INVALID)));
+      .orElseThrow(() -> {
+        userPasswordResetFailedCounter.increment();
+        return ApiException.of(TOKEN_INVALID);
+      });
 
     setPassword(user, newPassword);
+    userPasswordResetDoneCounter.increment();
+  }
+
+  CallbackResult requestPasswordResetViaSteam(String steamId) {
+    log.debug("Preparing password reset request for Steam ID: {}", steamId);
+
+    return userRepository.findOneBySteamId(steamId)
+      .map(steamUser -> {
+          String token = fafTokenService.createToken(
+            FafTokenType.PASSWORD_RESET,
+            Duration.ofSeconds(properties.getPasswordReset().getLinkExpirationSeconds()),
+            Map.of(UserService.KEY_USER_ID, String.valueOf(steamUser.getId()))
+          );
+
+          String callbackUrl = String.format(properties.getPasswordReset().getPasswordResetUrlFormat(), steamUser.getLogin(), token);
+          return new CallbackResult(callbackUrl, List.of());
+        }
+      )
+      .orElseThrow(() -> ApiException.of(UNKNOWN_STEAM_ID, steamId));
   }
 
   private void setPassword(User user, String password) {
-    log.debug("Updating FAF password for user: {}", user);
+    log.debug("Updating FAF password for user: {}", user.getLogin());
     user.setPassword(passwordEncoder.encode(password));
     userRepository.save(user);
-    log.debug("Updating anope password for user: {}", user);
+    log.debug("Updating anope password for user: {}", user.getLogin());
     anopeUserRepository.updatePassword(user.getLogin(), Hashing.md5().hashString(password, StandardCharsets.UTF_8).toString());
   }
 
@@ -289,60 +358,73 @@ public class UserService {
       && authentication.getPrincipal() instanceof FafUserDetails) {
       return getUser(((FafUserDetails) authentication.getPrincipal()).getId());
     }
-    throw new ApiException(new Error(TOKEN_INVALID));
+    throw ApiException.of(TOKEN_INVALID);
   }
 
   public User getUser(int userId) {
-    return userRepository.findById(userId).orElseThrow(() -> new ApiException(new Error(TOKEN_INVALID)));
+    return userRepository.findById(userId).orElseThrow(() -> ApiException.of(TOKEN_INVALID));
   }
 
   public String buildSteamLinkUrl(User user, String callbackUrl) {
     log.debug("Building Steam link url for user id: {}", user.getId());
     if (user.getSteamId() != null && !Objects.equals(user.getSteamId(), "")) {
       log.debug("User with id '{}' already linked to steam", user.getId());
-      throw new ApiException(new Error(ErrorCode.STEAM_ID_UNCHANGEABLE));
+      throw ApiException.of(ErrorCode.STEAM_ID_UNCHANGEABLE);
     }
 
     String token = fafTokenService.createToken(FafTokenType.LINK_TO_STEAM,
-      Duration.ofHours(1),
-      ImmutableMap.of(
+      Duration.ofHours(6),
+      Map.of(
         KEY_USER_ID, String.valueOf(user.getId()),
-        KEY_STEAM_LINK_CALLBACK_URL, callbackUrl
+        KEY_STEAM_CALLBACK_URL, callbackUrl
       )
     );
 
-    return steamService.buildLoginUrl(String.format(properties.getLinkToSteam().getSteamRedirectUrlFormat(), token));
+    userSteamLinkRequestedCounter.increment();
+    return steamService.buildLoginUrl(String.format(properties.getSteam().getLinkToSteamRedirectUrlFormat(), token));
   }
 
-  @SneakyThrows
-  public SteamLinkResult linkToSteam(String token, String steamId) {
+  public String buildSteamPasswordResetUrl() {
+    userPasswordResetRequestCounter.increment();
+    return steamService.buildLoginUrl(properties.getSteam().getSteamPasswordResetRedirectUrlFormat());
+  }
+
+  public CallbackResult linkToSteam(String token, String steamId) {
     log.debug("linkToSteam requested for steamId '{}' with token: {}", steamId, token);
     List<Error> errors = new ArrayList<>();
     Map<String, String> attributes = fafTokenService.resolveToken(FafTokenType.LINK_TO_STEAM, token);
 
-    User user = userRepository.findById(Integer.parseInt(attributes.get(KEY_USER_ID)))
-      .orElseThrow(() -> new ApiException(new Error(TOKEN_INVALID)));
+    try {
+      User user = userRepository.findById(Integer.parseInt(attributes.get(KEY_USER_ID)))
+        .orElseThrow(() -> ApiException.of(TOKEN_INVALID));
 
-    if (!steamService.ownsForgedAlliance(steamId)) {
-      errors.add(new Error(ErrorCode.STEAM_LINK_NO_FA_GAME));
-    }
+      if (!steamService.ownsForgedAlliance(steamId)) {
+        throw ApiException.of(ErrorCode.STEAM_LINK_NO_FA_GAME);
+      }
 
-    Optional<User> userWithSameSteamIdOptional = userRepository.findOneBySteamIdIgnoreCase(steamId);
-    userWithSameSteamIdOptional.ifPresent(userWithSameId ->
-      errors.add(new Error(ErrorCode.STEAM_ID_ALREADY_LINKED, userWithSameId.getLogin()))
-    );
+      userRepository.findOneBySteamId(steamId)
+        .ifPresent(userWithSameId -> {
+          throw ApiException.of(ErrorCode.STEAM_ID_ALREADY_LINKED, userWithSameId.getLogin());
+        });
 
-    if (errors.isEmpty()) {
       user.setSteamId(steamId);
       userRepository.save(user);
+    } catch (ApiException e) {
+      errors.addAll(Arrays.asList(e.getErrors()));
     }
 
-    String callbackUrl = attributes.get(KEY_STEAM_LINK_CALLBACK_URL);
-    return new SteamLinkResult(callbackUrl, errors);
+    if (errors.isEmpty()) {
+      userSteamLinkDoneCounter.increment();
+    } else {
+      userSteamLinkFailedCounter.increment();
+    }
+
+    String callbackUrl = attributes.get(KEY_STEAM_CALLBACK_URL);
+    return new CallbackResult(callbackUrl, errors);
   }
 
   @Value
-  static class SteamLinkResult {
+  static class CallbackResult {
     String callbackUrl;
     List<Error> errors;
   }
