@@ -6,16 +6,18 @@ import com.faforever.api.data.domain.FeaturedMod;
 import com.faforever.api.deployment.git.GitWrapper;
 import com.faforever.api.featuredmods.FeaturedModFile;
 import com.faforever.api.featuredmods.FeaturedModService;
-import com.google.common.collect.ImmutableMap;
-import org.junit.Before;
 import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.migrationsupport.rules.ExternalResourceSupport;
 import org.junit.rules.TemporaryFolder;
-import org.junit.runner.RunWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.Mockito;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.web.client.RestClientException;
+import org.springframework.web.client.RestTemplate;
 
 import java.io.IOException;
 import java.io.RandomAccessFile;
@@ -24,19 +26,22 @@ import java.nio.file.Path;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
 
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.CoreMatchers.notNullValue;
 import static org.junit.Assert.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.anyShort;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Matchers.any;
 import static org.mockito.Matchers.eq;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
-@RunWith(MockitoJUnitRunner.class)
+@ExtendWith({MockitoExtension.class, ExternalResourceSupport.class})
 public class LegacyFeaturedModDeploymentTaskTest {
 
   @Rule
@@ -48,21 +53,24 @@ public class LegacyFeaturedModDeploymentTaskTest {
   private GitWrapper gitWrapper;
   @Mock
   private FeaturedModService featuredModService;
+  @Mock
+  private RestTemplate restTemplate;
+
   private FafApiProperties properties;
 
-  @Before
-  public void setUp() throws Exception {
+  @BeforeEach
+  public void setUp() {
     properties = new FafApiProperties();
     Deployment deployment = properties.getDeployment();
     deployment.setRepositoriesDirectory(repositoriesFolder.getRoot().getAbsolutePath());
     deployment.setFeaturedModsTargetDirectory(targetFolder.getRoot().getAbsolutePath());
 
-    instance = new LegacyFeaturedModDeploymentTask(gitWrapper, featuredModService, properties);
+    instance = new LegacyFeaturedModDeploymentTask(gitWrapper, featuredModService, properties, restTemplate);
   }
 
-  @Test(expected = IllegalStateException.class)
-  public void testRunWithoutConfigurationThrowsException() throws Exception {
-    instance.run();
+  @Test
+  public void testRunWithoutConfigurationThrowsException() {
+    assertThrows(IllegalStateException.class, () -> instance.run() );
   }
 
   @Test
@@ -106,7 +114,8 @@ public class LegacyFeaturedModDeploymentTaskTest {
       .setFileExtension("nx3")
       .setTechnicalName("faf")
       .setAllowOverride(true)
-      .setGitUrl("git@example.com/FAForever/faf"));
+      .setGitUrl("git@example.com/FAForever/faf")
+      .setDeploymentWebhook("someUrl"));
 
     Mockito.doAnswer(invocation -> {
       Path repoFolder = invocation.getArgument(0);
@@ -124,7 +133,7 @@ public class LegacyFeaturedModDeploymentTaskTest {
     when(featuredModService.getFeaturedMods()).thenReturn(Collections.singletonList(
       new FeaturedMod().setTechnicalName("faf")
     ));
-    when(featuredModService.getFileIds("faf")).thenReturn(ImmutableMap.of(
+    when(featuredModService.getFileIds("faf")).thenReturn(Map.of(
       "ForgedAlliance.exe", (short) 1,
       "someDir.nx3", (short) 2
     ));
@@ -137,6 +146,7 @@ public class LegacyFeaturedModDeploymentTaskTest {
 
     ArgumentCaptor<List<FeaturedModFile>> filesCaptor = ArgumentCaptor.forClass(List.class);
     verify(featuredModService).save(eq("faf"), eq((short) 1337), filesCaptor.capture());
+    verify(restTemplate).getForObject("someUrl", String.class);
 
     List<FeaturedModFile> files = filesCaptor.getValue();
     files.sort(Comparator.comparing(FeaturedModFile::getFileId));
@@ -153,6 +163,33 @@ public class LegacyFeaturedModDeploymentTaskTest {
 
     assertThat(Files.exists(targetFolder.getRoot().toPath().resolve("updates_faf_files/someDir.1337.nx3")), is(true));
     assertThat(Files.exists(targetFolder.getRoot().toPath().resolve("updates_faf_files/ForgedAlliance.1337.exe")), is(true));
+  }
+
+  @Test
+  public void testInvokeDeploymentWebhookSkipped() {
+    instance.invokeDeploymentWebhook(new FeaturedMod());
+    verifyNoMoreInteractions(restTemplate);
+  }
+
+  @Test
+  public void testInvokeDeploymentWebhookInvokedSuccess() {
+    String someUrl = "someUrl";
+    instance.invokeDeploymentWebhook(new FeaturedMod().setDeploymentWebhook(someUrl));
+
+    verify(restTemplate).getForObject(someUrl, String.class);
+    verifyNoMoreInteractions(restTemplate);
+  }
+
+  @Test
+  public void testInvokeDeploymentWebhookResilience() {
+    String someUrl = "someUrl";
+
+    when(restTemplate.getForObject(anyString(), eq(String.class))).thenThrow(new RestClientException("error"));
+
+    instance.invokeDeploymentWebhook(new FeaturedMod().setDeploymentWebhook(someUrl));
+
+    verify(restTemplate).getForObject(someUrl, String.class);
+    verifyNoMoreInteractions(restTemplate);
   }
 
   private void createDummyExe(Path file) throws IOException {
